--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                     Adicionar no carrinho</a>
             </aside>
+            <div class="img">
+                
+            </div>
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                 <img src="img/paracetamol.png"></a>
