--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             <a href="#">contato</a>
     </nav>
     <main>
+        <section class="fundo-banner">
+            <h1>Cuidando de você</h1>
+            <h3>Todos os dias.</h3>
+            <p>Encontre medicamentos, dermocosméticos e produtos de higiene com os melhores preços e entrega rápida.</p>
+            <a href="#">Explorar catálogo</a>
+                <img src="img/remediosbanner3.png">
+        </section>
         <h2>Mais comprados</h2>
         <section>
             <aside>
