--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </header>
     <nav class="menu">
             <a href="#">Inicio</a>
-            <a href="#">compras</a>
-            <a href="#">contato</a>
+            <a href="#">Catalogo</a>
+            <a href="#">Contato</a>
     </nav>
     <main>
         <section class="fundo-banner">
@@ -48,7 +48,7 @@
             <a href="#">Explorar catálogo</a>
         </section>
         <h2>Mais comprados</h2>
-        <section>
+        <section class="conteudo">
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                 <img src="img/logosemfundo.png"></a>
@@ -64,6 +64,14 @@
                 <p>Por R$ 10,00</p>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                     Adicionar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/logosemfundo.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
             </aside>
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
