--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <section class="conteudo">
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                <img src="img/logosemfundo.png"></a>
+                <img src="
+                img/paracetamol.png"></a>
                 <h3>Paracetamol 500mg</h3>
                 <p>Por R$ 10,00</p>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
@@ -67,7 +68,7 @@
             </aside>
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                <img src="img/logosemfundo.png"></a>
+                <img src="img/paracetamol.png"></a>
                 <h3>Paracetamol 500mg</h3>
                 <p>Por R$ 10,00</p>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
@@ -75,7 +76,7 @@
             </aside>
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                <img src="img/logosemfundo.png"></a>
+                <img src="img/paracetamol.png"></a>
                 <h3>Paracetamol 500mg</h3>
                 <p>Por R$ 10,00</p>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
