--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>Encontre medicamentos, dermocosméticos e produtos de higiene com os melhores preços e entrega rápida.</p>
             <a href="#">Explorar catálogo</a>
         </section>
-        <h2>Mais comprados</h2>
+        <h2>MAIS VENDIDOS</h2>
         <section class="conteudo">
             <aside>
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
