--- a/index.html
+++ b/index.html
@@ -82,7 +82,95 @@
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                     Adiconar no carrinho</a>
             </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adiconar no carrinho</a>
+            </aside>
+
         </section>
+        
     </main>
+    <footer>
+        <div class="footer">
+            <div class="footer-container">
+                <div class="footer-col">
+                    <h2>Farmacia</h2>
+                    <p>Descubra fragâncias exclusivas que contam histórias.
+                        uma curadoria do mais prestigiados perfumes mundiais</p>
+                </div>
+                <div class="footer-col">
+                    <h2>Redes sociais</h2>
+                    <p><a href="#">Instagram</a></p>
+                    <p><a href="#">Whatsapp</a></p>
+                </div>
+                <div class="footer-col">
+                    <h2>Informações</h2>
+                    <p><a href="https://api.whatsapp.com/send?phone=55085985677491" target="_blankx'">Contato</a></p>
+                    <p><a href="https://maps.app.goo.gl/f2U2KhqEVaRaPkyt9" target="_blank">Localização</a></p>
+                </div>
+             </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
