--- a/index.html
+++ b/index.html
@@ -122,31 +122,6 @@
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                     Adiconar no carrinho</a>
             </aside>
-            <aside>
-                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                <img src="img/paracetamol.png"></a>
-                <h3>Paracetamol 500mg</h3>
-                <p>Por R$ 10,00</p>
-                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                    Adiconar no carrinho</a>
-            </aside>
-            <aside>
-                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                <img src="img/paracetamol.png"></a>
-                <h3>Paracetamol 500mg</h3>
-                <p>Por R$ 10,00</p>
-                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                    Adiconar no carrinho</a>
-            </aside>
-            <aside>
-                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                <img src="img/paracetamol.png"></a>
-                <h3>Paracetamol 500mg</h3>
-                <p>Por R$ 10,00</p>
-                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
-                    Adiconar no carrinho</a>
-            </aside>
-
         </section>
         
     </main>
@@ -160,8 +135,8 @@
                 </div>
                 <div class="footer-col">
                     <h2>Redes sociais</h2>
-                    <p><a href="#">Instagram</a></p>
-                    <p><a href="#">Whatsapp</a></p>
+                    <p><a href="https://www.instagram.com/farmaciagenial/" target="_blank">Instagram</a></p>
+                    <p><a href="">Whatsapp</a></p>
                 </div>
                 <div class="footer-col">
                     <h2>Informações</h2>
