--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="footer-col">
                     <h2>Redes sociais</h2>
                     <p><a href="https://www.instagram.com/farmaciagenial/" target="_blank">Instagram</a></p>
-                    <p><a href="">Whatsapp</a></p>
+                    <p><a href="https://api.whatsapp.com/send?phone=55085985677491&" target="_blank">Whatsapp</a></p>
                 </div>
                 <div class="footer-col">
                     <h2>Informações</h2>
