--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <header>
+    <!-- <header>
         <div class="title">
             <h1>Farmacia Genial</h1>
             <p>Saúde & Bem-estar</p>
@@ -39,12 +39,26 @@
             <a href="#">Inicio</a>
             <a href="#">Catalogo</a>
             <a href="#">Contato</a>
-    </nav>
+    </nav> -->
+    <div class="cabecalho">
+        <div class="cabecalho-container">
+            <div class="col">
+                <span class="titulo"> <img src="img/cabecalho.png" width="50px">Farmacia Genial</span>
+            </div>
+            <div class="cabecalho-col">
+                <a href="#">Inicio</a>
+                <a href="#">Produtos</a>
+            </div>
+            <div>
+                <h3>Entrega gratis</h3>
+            </div>
+        </div>
+    </div>
     <main>
         <section class="fundo-banner">
-            <h1>Cuidando de você</h1>
-            <h3>Todos os dias.</h3>
-            <p>Encontre medicamentos, dermocosméticos e produtos de higiene com os melhores preços e entrega rápida.</p>
+            <h1>Sua Saúde é <span class="destaque">Nossa</span></h1>
+            <h3><span class="destaque">Prioridade</span>.</h3>
+            <p>Encontre os melhores medicamentos, produtos de higiene e beleza com os menores preços. Entrega rápida e atendimento personalizado.</p>
             <a href="#">Explorar catálogo</a>
         </section>
         <h2>MAIS VENDIDOS</h2>
