--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     </nav> -->
     <div class="cabecalho">
         <div class="cabecalho-container">
-            <div class="col">
-                <span class="titulo"> <img src="img/cabecalho.png" width="50px">Farmacia Genial</span>
+            <div class="cabecalho-col">
+                <a href="#"><span class="titulo"> <img src="img/cabecalho.png" width="50px">Farmacia Genial</span></a>
             </div>
             <div class="cabecalho-col">
                 <a href="#">Inicio</a>
-                <a href="#">Produtos</a>
+                <a href="#">Catálogo</a>
             </div>
             <div>
                 <h3>Entrega gratis</h3>
@@ -143,19 +143,33 @@
         <div class="footer">
             <div class="footer-container">
                 <div class="footer-col">
-                    <h2>Farmacia</h2>
-                    <p>Descubra fragâncias exclusivas que contam histórias.
-                        uma curadoria do mais prestigiados perfumes mundiais</p>
+                    <h2>Farmacia Genial</h2>
+                    <p>Sua farmácia online de confiança. Cuidando da sua saúde com qualidade e carinho.</p><br>
+                    <a href="#"><img src="img/whatsapp.png" alt=""></a>
+                    <a href="#"><img src="img/instagram.png" alt=""></a>
                 </div>
                 <div class="footer-col">
-                    <h2>Redes sociais</h2>
-                    <p><a href="https://www.instagram.com/farmaciagenial/" target="_blank">Instagram</a></p>
-                    <p><a href="https://api.whatsapp.com/send?phone=55085985677491&" target="_blank">Whatsapp</a></p>
+                    <h2>Links úteis</h2>
+                    <p><a href="#">Sobre Nós</a></p>
+                    <p><a href="#">Politica de Privacidade</a></p>
+                    <p><a href="#">Termos de Uso</a></p>
+                    <p><a href="#">FAQ</a></p>
                 </div>
                 <div class="footer-col">
-                    <h2>Informações</h2>
-                    <p><a href="https://api.whatsapp.com/send?phone=55085985677491" target="_blankx'">Contato</a></p>
-                    <p><a href="https://maps.app.goo.gl/f2U2KhqEVaRaPkyt9" target="_blank">Localização</a></p>
+                    <h2>Produtos</h2>
+                    <p><a href="#">Medicamentos</a></p>
+                    <p><a href="#">Beleza</a></p>
+                    <p><a href="#">Vitaminas</a></p>
+                    <p><a href="#">Higiene</a></p>
+                </div>
+                <div class="footer-col">
+                    <h2>Contato</h2>
+                    <img src="img/telefone.png" width="24px">
+                    <span>(85) 98810-4274</span> <br>
+                    <img src="img/pin-de-localizacao.png" alt="">
+                    <span>Fortaleza, CE</span> <br>
+                    <img src="img/relogio.png">
+                    <span>Abre 07:00</span>
                 </div>
              </div>
             </div>
