--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="footer-container">
                 <div class="footer-col">
                     <h2>Farmacia Genial</h2>
-                    <p>Sua farmácia online de confiança. Cuidando da sua saúde com qualidade e carinho.</p><br>
+                    <p>Sua farmácia online de confiança. Cuidando da sua saúde com qualidade e carinho.</p>
                     <a href="#"><img src="img/whatsapp.png" alt=""></a>
                     <a href="#"><img src="img/instagram.png" alt=""></a>
                 </div>
