--- a/catalogo.html
+++ b/catalogo.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmacia genial</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/catalogo.css">
 </head>
 <body>
+    <div class="cabecalho">
+        <div class="cabecalho-container">
+            <div class="cabecalho-col">
+                <a href="#"><span class="titulo"> <img src="img/cabecalho.png" width="50px">Farmacia Genial</span></a>
+            </div>
+            <div class="cabecalho-col">
+                <a href="#">Inicio</a>
+                <a href="#">Catálogo</a>
+            </div>
+            <div>
+                <h3>Entrega gratis</h3>
+            </div>
+        </div>
+    </div>
+        <div class="catalogo">
+            <h1>Nossos Produtos</h1>
+            <p>Encontre tudo o que você precisa para cuidar da sua saúde e bem-estar</p>
+        </div>
+    <main>  
+        <section class="conteudo">
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="
+                img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adicionar no carrinho</a>
+            </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Paracetamol 500mg</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adicionar no carrinho</a>
+            </aside>
+    </main>
     
 </body>
 </html>
