--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <h1>Sua Saúde é <span class="destaque">Nossa</span></h1>
             <h3><span class="destaque">Prioridade</span>.</h3>
             <p>Encontre os melhores medicamentos, produtos de higiene e beleza com os menores preços. Entrega rápida e atendimento personalizado.</p>
-            <a href="#">Explorar catálogo</a>
-            <a href="#">Fale Conosco</a>
+            <a href="#">Produtos</a>
+            <a href="#" class="fale-conosco">Fale Conosco</a>
         </section>
         <h2>MAIS VENDIDOS</h2>
         <section class="conteudo">
