--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="cabecalho">
         <div class="cabecalho-container">
             <div class="cabecalho-col">
-                <a href="#"><span class="titulo"> <img src="img/cabecalho.png" width="50px">Farmacia Genial</span></a>
+                <a href="index.html"><span class="titulo"> <img src="img/cabecalho.png" width="50px">Farmacia Genial</span></a>
             </div>
             <div class="cabecalho-col">
-                <a href="#">Inicio</a>
-                <a href="#">Catálogo</a>
+                <a href="index.html">Inicio</a>
+                <a href="catalogo.html">Catálogo</a>
             </div>
             <div>
                 <h3>Entrega gratis</h3>
@@ -48,8 +48,8 @@
             <h1>Sua Saúde é <span class="destaque">Nossa</span></h1>
             <h3><span class="destaque">Prioridade</span>.</h3>
             <p>Encontre os melhores medicamentos, produtos de higiene e beleza com os menores preços. Entrega rápida e atendimento personalizado.</p>
-            <a href="#">Produtos</a>
-            <a href="#" class="fale-conosco">Fale Conosco</a>
+            <a href="catalogo.html">Produtos</a>
+            <a href="" class="fale-conosco">Fale Conosco</a>
         </section>
         <h2>MAIS VENDIDOS</h2>
         <section class="conteudo">
