--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <div class="footer-col">
                     <h2>Farmacia Genial</h2>
                     <p>Sua farmácia online de confiança. Cuidando da sua saúde com qualidade e carinho.</p>
-                    <a href="#"><img src="img/whatsapp.png" alt=""></a>
-                    <a href="#"><img src="img/instagram.png" alt=""></a>
+                    <a href="https://wa.link/71187x" target="_blank"><img src="img/whatsapp.png"> </a>
+                    <a href="https://www.instagram.com/farmaciagenial/" target="_blank"><img src="img/instagram.png"> </a>
                 </div>
                 <div class="footer-col">
                     <h2>Links úteis</h2>
@@ -146,17 +146,10 @@
                     <p><a href="#">FAQ</a></p>
                 </div>
                 <div class="footer-col">
-                    <h2>Produtos</h2>
-                    <p><a href="#">Medicamentos</a></p>
-                    <p><a href="#">Beleza</a></p>
-                    <p><a href="#">Vitaminas</a></p>
-                    <p><a href="#">Higiene</a></p>
-                </div>
-                <div class="footer-col">
                     <h2>Contato</h2>
                     <img src="img/telefone.png" width="24px">
                     <span>(85) 98810-4274</span> <br>
-                    <img src="img/pin-de-localizacao.png" alt="">
+                    <img src="img/pin-de-localizacao.png">
                     <span>Fortaleza, CE</span> <br>
                     <img src="img/relogio.png">
                     <span>Abre 07:00</span>
