--- a/catalogo.html
+++ b/catalogo.html
@@ -27,7 +27,7 @@
         </div>
     <main> 
          <form action="#">
-            <input type="text" id="pesquisa" placeholder="Encontre seu produto..." onkeyup="pesquisar()">
+            <input type="text" id="pesquisa" placeholder="Buscar produtos.." onkeyup="pesquisar()">
 
             <p id="resultado"></p>
          </form> 
@@ -65,8 +65,44 @@
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                     Adicionar no carrinho</a>
             </aside>
+            <aside>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                <img src="img/paracetamol.png"></a>
+                <h3>Celetil</h3>
+                <p>Por R$ 10,00</p>
+                <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
+                    Adicionar no carrinho</a>
+            </aside>
     </main>
-    
+    <footer>
+        <div class="footer">
+            <div class="footer-container">
+                <div class="footer-col">
+                    <h2>Farmacia Genial</h2>
+                    <p>Sua farmácia online de confiança. Cuidando da sua saúde com qualidade e carinho.</p>
+                    <a href="https://wa.link/71187x" target="_blank"><img src="img/whatsapp.png"> </a>
+                    <a href="https://www.instagram.com/farmaciagenial/" target="_blank"><img src="img/instagram.png"> </a>
+                </div>
+                <div class="footer-col">
+                    <h2>Links úteis</h2>
+                    <p><a href="#">Sobre Nós</a></p>
+                    <p><a href="#">Politica de Privacidade</a></p>
+                    <p><a href="#">Termos de Uso</a></p>
+                    <p><a href="#">FAQ</a></p>
+                </div>
+                <div class="footer-col">
+                    <h2>Contato</h2>
+                    <img src="img/telefone.png" width="24px">
+                    <span>(85) 98810-4274</span> <br>
+                    <img src="img/pin-de-localizacao.png">
+                    <span>Fortaleza, CE</span> <br>
+                    <img src="img/relogio.png">
+                    <span>Abre 07:00</span>
+                </div>
+             </div>
+            </div>
+        </div>
+    </footer>
     <script src="pesquisa.js"></script>
 
 </body>
