--- a/catalogo.html
+++ b/catalogo.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmacia genial</title>
-    <link rel="stylesheet" href="styles/catalogo.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <style>
+        @font-face {
+            font-family: fonte;
+            src: url(fontes/PassoTest-SemiBold.ttf) format(truetype);
+        }
+        @font-face {
+            font-family: fonte1;
+            src: url(fontes/PassoTest-Regular.ttf) format(truetype);
+        }
+        @font-face {
+            font-family: fonte2;
+            src: url(fontes/PassoTest-Medium.ttf) format(truetype);
+        }
+
+        @font-face {
+            font-family: fonte3;
+            src: url(fontes/PassoTest-Bold.ttf) format(truetype);
+        }
+    </style>
 </head>
 <body>
     <div class="cabecalho">
