--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Sua Saúde é <span class="destaque">Nossa</span></h1>
             <h3><span class="destaque">Prioridade</span>.</h3>
             <p>Encontre os melhores medicamentos, produtos de higiene e beleza com os menores preços. Entrega rápida e atendimento personalizado.</p>
-            <a href="catalogo.html">Produtos</a>
+            <a href="#aside">Produtos</a>
             <a href="" class="fale-conosco">Fale Conosco</a>
         </section>
         <h2>MAIS VENDIDOS</h2>
@@ -118,7 +118,7 @@
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                     Adiconar no carrinho</a>
             </aside>
-            <aside>
+            <aside id="aside">
                 <a href="https://api.whatsapp.com/send?phone=55085985677491&text=Ol%C3%A1,%20quero%20saber%20mais%20sobre%20este%20produto" target="_blank">
                 <img src="img/paracetamol.png"></a>
                 <h3>Paracetamol 500mg</h3>
